Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3199

Exception field has basic metadata

    XMLWordPrintableJSON

Details

    Description

      If a field of a struct or of an union, or the type of a container is an exception, the metadata associated with the field says it's a struct, but the value is FieldValueMetaData, not StructMetaData. As a consequence, it is not possible to get the class for the field.

      Attachments

        Activity

          People

            Unassigned Unassigned
            laurent Laurent Goujon
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: