THRIFT-3199 Uses StructMetaData for exception fieldvalue Client: Compiler(Java, javame, as3) Patch: Laurent Goujon

This closes #526